--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="change_image">Change Image</string>
     <string name="change_status">Change Status</string>
     <string name="hi_there_i_m_using_chatapp">Hi There! I\'m using ChatApp</string>
+    <string name="create_a_new_account">Create a New Account</string>
 </resources>
