bitmap compressions start

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hi_there_i_m_using_chatapp">Hi There! I\'m using ChatApp</string>
     <string name="create_a_new_account">Create a New Account</string>
     <string name="welcome_to_chatapp">Welcome to ChatApp</string>
+    <string name="login_to_my_account">Login to my account</string>
 </resources>
